[package]
name = "dit"
version = "0.3.0"
edition = "2024"
authors = ["Hyperview Technologies Inc."]
description = "An import tool for BACnet and Modbus sensor definitions for Hyperview"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
confy = "1.0.0"
csv = "1.2.1"
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.17"
oauth2 = "5.0.0"
reqwest = { version = "0.12.20", features = ["json", "native-tls-vendored"] }
serde = "1.0.152"
serde_json = "1.0.93"
serde_with = "3.0.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }

[profile.release]
strip = true

[dev-dependencies]
tempfile = "3.5.0"

